--- a/options.conf
+++ b/options.conf
@@ -2,7 +2,9 @@
 name = libdbusmenu-qt
 url = https://github.com/unity8-team/libdbusmenu-qt/archive/0.9.3+16.04.20160218-0ubuntu1.tar.gz
 archives = 
-giturl = 
+giturl = https://github.com/unity8-team/libdbusmenu-qt.git
+domain = 
+alias = 
 
 [autospec]
 # build 32 bit libraries
@@ -17,7 +19,7 @@ autoupdate = false
 broken_c++ = false
 # disable parallelization during build
 broken_parallel_build = false
-# this package is a library compatability package and only ships versioned library files
+# this package is a library compatibility package and only ships versioned library files
 compat = false
 # set conservative build flags
 conservative_flags = false
@@ -33,8 +35,12 @@ insecure_build = false
 keepstatic = false
 # do not require autostart subpackage
 no_autostart = false
+# do not generate debuginfo for this package
+nodebug = false
 # disable stripping binaries
 nostrip = false
+# configure build also for openmpi
+openmpi = false
 # optimize build for size over speed
 optimize_size = false
 # set profile for pgo
